# FYP-LLM

./: .gitignore  README.md  ablation_config.json  app.py  app_styles.py  config.py  demo_app.py  generate_sample_results.py  main.py  openalex_demo.py  openalex_results.csv  openalex_results.json  pyproject.toml  requirements.txt  test_all_gaps.py  test_assembler.py  test_corpus.py  test_evaluation.py  test_kappa.py  test_mab.py  test_mab_quick.py  test_metrics.py  test_prompts.py  test_statistics.py  test_verifier.py
.claude/: settings.local.json
agents/: assembler_agent.py  planner_agent.py  search_agent.py  summariser_agent.py  verifier_agent.py
bandit_log/: convergence_summary.csv  ucb1_state.json
configs/: prompts.py
data/: annotation_pass1_sample.csv  annotation_pass2_sample.csv
data/corpus/: builder.py  corpus_combined.json  corpus_metadata.json  corpus_topic1.json  corpus_topic2.json
data/eval/: baseline_1_Agentic_AI_for_reliable_academic_literat_20260329_034223.txt  (+81 more)
evaluation/: ablation_study.py  annotation_tool.ipynb  baseline.py  cost_tracker.py  evaluator.py  metrics.py
evaluation_results/: ablation_raw.csv  ablation_summary.json  annotator_consistency.json  correction_passes_log.json  error_taxonomy_log.json  topic_history.json  wilson_ci_log.json
graph/: baseline_graph.py  workflow_graph.py
src/: api_clients.py  config.py  document_reader.py  mab_selector.py  models.py  retrieval.py
tools/: bandit_logger.py  inter_annotator_check.py  openalex_client.py  run_ablation.py  vector_store.py  wilson_ci.py
utils/: logger.py
(+295 files in other folders)
